--- a/app/pug/blocks/_layout.pug
+++ b/app/pug/blocks/_layout.pug
@@ -8,6 +8,7 @@ html(lang="ru")
     link(type="text/css", href="css/jquery-ui.min.css", rel="stylesheet")
     link(href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap&subset=cyrillic" rel="stylesheet")
     link(type="text/css", href="css/hamburgers.css", rel="stylesheet")
+    link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css")
     link(type="text/css", href="css/main.css", rel="stylesheet")
     title VIDIVIDS - Ролики для соц.сетей
   body
