--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -1,18 +1,72 @@
 extends blocks/_layout
 append content
-  -
-    var nav = [
-      'Продукция',
-      'Декор',
-      'Оформление',
-      'Услуги',
-      'Оплата',
-      'Акции',
-      'Контакты',
-      'Статьи',
-      'Галерея',
-      'Каталог',
-      'Cart',
-    ];
   main.main
-   
+    .box.col
+      section.our--works.d-flex.col
+        h3(class="title") наши работы
+        .works--list.d-flex.flex-wrap.space-between
+          .our--work__item
+            iframe(src="https://www.youtube.com/embed/Wtn9XQtLiJE" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+          .our--work__item
+            iframe(src="https://www.youtube.com/embed/Wtn9XQtLiJE" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+          .our--work__item
+            iframe(src="https://www.youtube.com/embed/Wtn9XQtLiJE" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+          .our--work__item
+            iframe(src="https://www.youtube.com/embed/Wtn9XQtLiJE" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+          .our--work__item
+            iframe(src="https://www.youtube.com/embed/Wtn9XQtLiJE" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+          .our--work__item
+            iframe(src="https://www.youtube.com/embed/Wtn9XQtLiJE" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+          .our--work__item
+            iframe(src="https://www.youtube.com/embed/Wtn9XQtLiJE" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+          .our--work__item
+            iframe(src="https://www.youtube.com/embed/Wtn9XQtLiJE" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+          .our--work__item
+            iframe(src="https://www.youtube.com/embed/Wtn9XQtLiJE" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+    section.keep-it
+      .box
+        .col-50
+          p(class="keep-it__text") Внедряйте в работу видео-маркетинг, пока конкуренты не забрали ваших подписчиков!
+        .col-50.ai-center.justify-center.d-flex
+          button(type="button" class="sendOrder") Оставить заявку
+    section.reviews
+      .box.col
+        h3(class="title") Отзывы
+        .reviews--container
+          .reviews--item.d-flex
+            img(src="img/client3.png", alt="")
+            .review--info.d-flex.col
+              p.review--text Работали, все супер, оперативно, недорого и с учетом всех пожеланий. спасибо!
+              p.review--name Алесь Ковалевич, г. Москва. Онлайн-магазин Мамбо24
+          .reviews--item.d-flex
+            img(src="img/client.png", alt="")
+            .review--info.d-flex.col
+              p.review--text Много можно рассказывать какие замечательные ребята, но в итоге всем нам нужна лишь одна информация - мы хотим найти компанию, которой можно абсолютно довериться😉☝, чтобы точно знать, что твои задачи решатся качественно, правильно и в срок. Так вот! Ребята действительно знают своё дело и очень умело справляются с поставленными тз, даже при невозможных сроках (проверено)! Рекомендуем эту действительно хорошую команду профессионалов 🔜🔜🔜 только таким же хорошим и добросовестным заказчикам! Хочется пожелать успеха, вдохновения, процветания и ещё раз поблагодарить за проделанную работу!✨☺🙏                 
+              p.review--name Лидия, г. Санкт-Петербург. GLS creative workshop
+          .reviews--item.d-flex
+            img(src="img/client2.png", alt="")
+            .review--info.d-flex.col
+              p.review--text Отличное видео, спасибо! А главное за 3 дня - радости моей не было предела!!   
+              p.review--name Евгений Щепин, г. Тюмень. StreetWorkout
+          .reviews--item.d-flex
+            img(src="img/client1.png", alt="")
+            .review--info.d-flex.col
+              p.review--text Большое спасибо студии ВидиВидс.Мы получили очень качественный ролик с интересными эффектами и продающей структурой.Рекомендую всем эту студию, полностью доволен результатом.
+              p.review--name Петр Деревенский, г. Казань. Студия Wsalesite
+    section.faq
+      .box.col
+        h3(class="title") Ответы на часто задаваемые вопросы
+        .faq--container#faq-accordion
+          p Какой длинны делать видео-ролик?
+          div
+            p Чем меньше времени человек тратит на просмотр видео, тем лучше оно срабатывает. Оптимальная длина видео-ролика зависит от конкретной задачи, но в целом не должна превышать двух минут. Для социальных сетей оптимальная продолжительность 15-30  секунд.
+          p Как сделать, чтобы видео увеличивало продажи?
+          div
+            p Разместите в конце видео-ролика призык к конкретному действию: Попросите прокомментировать публикацию, перейти на сайт, зарегистрироваться, позвонить, да что угодно. Развивайте отношения с потенциальным клиентом, чтобы конвертировать его в реального.
+          p Где лучше размещать видео-ролик?
+          div
+            p Вы можете разместить видео на главной странице вашего сайта, а также в социальных сетях: в группах Facebook или ВКонтакте, на Youtube-канале, в Instagram. В социальных сетях рекламные посты, включающие видео, показывают намного большую эффективность по сравнению с традиционными.
+          p Какой формат видео-ролика подойдет моему бизнесу?
+          div
+            p Задачи у каждого бизнеса очень разные. В работе мы индивидуально подходим к решению конкретно ваших задач и подбираем тот формат, который лучше всего сработает именно в вашем случае. Оставьте заявку, и мы бесплатно проконсультируем вас и подберем подходящий вариант видео-рекламы!
+        button(type="button" class="sendOrder") Оставить заявку
