--- a/app/sass/ui/_ui-components.sass
+++ b/app/sass/ui/_ui-components.sass
@@ -34,6 +34,8 @@ textarea,
 input
   font-family: $mainFont
 
+.ui-widget
+  font-family: $mainFont
 label
   cursor: pointer
   &:focus,
@@ -69,7 +71,7 @@ select, input, textarea
 .box
   width: 100%
   display: flex
-  max-width: 1260px
+  max-width: 1360px
   padding: 0 30px
   margin: 0 auto
   position: relative
