--- a/app/sass/ui/_variables.sass
+++ b/app/sass/ui/_variables.sass
@@ -1,7 +1,8 @@
 // Colors
-
+$black: #000000
+$red: #e71b1b
 // Fonts
 $mainFont: 'Montserrat', sans-serif
 
 // Animations
-$default-transition: all .2s linear
+$transition: all .2s linear
