--- a/app/css/main.css
+++ b/app/css/main.css
@@ -219,6 +219,91 @@ select, input, textarea {
 .m0-auto {
   margin: 0 auto; }
 
+/* form starting stylings ------------------------------- */
+.order--modal .group {
+  position: relative;
+  margin-bottom: 30px; }
+  .order--modal .group input {
+    font-size: 16px;
+    padding: 10px;
+    display: block;
+    width: 300px;
+    border: none;
+    border-bottom: 1px solid #ccc; }
+  .order--modal .group input:focus {
+    outline: none; }
+
+.order--modal label {
+  color: #999;
+  font-size: 18px;
+  position: absolute;
+  pointer-events: none;
+  left: 10px;
+  top: 15px;
+  -o-transition: 0.2s ease all;
+  transition: 0.2s ease all;
+  -moz-transition: 0.2s ease all;
+  -webkit-transition: 0.2s ease all; }
+
+.order--modal input:focus ~ label {
+  top: -15px;
+  font-size: 14px;
+  color: #5264AE; }
+
+.order--modal .bar {
+  position: relative;
+  display: block;
+  width: 320px; }
+
+.order--modal .bar:before,
+.order--modal .bar:after {
+  content: "";
+  height: 2px;
+  width: 0;
+  bottom: 0;
+  position: absolute;
+  background: #5264AE;
+  -o-transition: 0.2s ease all;
+  transition: 0.2s ease all;
+  -moz-transition: 0.2s ease all;
+  -webkit-transition: 0.2s ease all; }
+
+.order--modal .bar:before {
+  left: 50%; }
+
+.order--modal .bar:after {
+  right: 50%; }
+
+.order--modal input:focus ~ .bar:before,
+.order--modal input:focus ~ .bar:after {
+  width: 50%; }
+
+.order--modal .order--modal__title {
+  margin: 0 auto;
+  margin-bottom: 25px;
+  text-transform: uppercase;
+  text-align: center; }
+
+.order--modal .sendBtn {
+  margin: 0 auto;
+  margin-top: 20px;
+  background: #e71b1b;
+  color: #ffffff;
+  font-weight: 500;
+  font-size: 18px;
+  text-align: center;
+  display: block;
+  padding: 15px 30px;
+  -webkit-transition: 0.2s ease all;
+  -o-transition: 0.2s ease all;
+  transition: 0.2s ease all; }
+  .order--modal .sendBtn:hover {
+    color: #e71b1b;
+    background: #000000;
+    -webkit-transition: 0.2s ease all;
+    -o-transition: 0.2s ease all;
+    transition: 0.2s ease all; }
+
 canvas {
   width: 100%;
   height: 100%; }
@@ -424,7 +509,8 @@ header {
 
 .keep-it {
   background: #000000;
-  padding: 30px 0px; }
+  margin: 60px 0px;
+  padding: 20px 0px; }
   .keep-it .keep-it__text {
     color: #ffffff;
     font-size: 24px; }
@@ -447,7 +533,7 @@ header {
     color: #e71b1b; }
 
 .faq {
-  padding: 30px 0px; }
+  margin: 60px 0px; }
   .faq .sendOrder {
     margin: 0 auto;
     margin-top: 30px; }
@@ -483,3 +569,96 @@ header {
     .reviews .reviews--item .review--name {
       margin-top: 15px;
       font-weight: 700; }
+
+.result {
+  margin: 60px 0px; }
+  .result .result--text {
+    font-size: 18px;
+    margin-bottom: 15px; }
+
+.main--section {
+  margin: 60px 0px;
+  position: relative; }
+  .main--section::before {
+    content: url(../img/decor1.png);
+    position: absolute;
+    left: 0;
+    top: -60px;
+    z-index: -1; }
+  .main--section .main--title {
+    margin-bottom: 30px; }
+  .main--section .main--list {
+    margin-bottom: 20px;
+    font-size: 18px; }
+    .main--section .main--list li {
+      margin-bottom: 10px; }
+  .main--section .main--text {
+    font-size: 18px;
+    margin-bottom: 20px; }
+  .main--section .mainSendOrder {
+    background: #e71b1b;
+    padding: 30px 60px;
+    color: #ffffff;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 36px;
+    position: relative;
+    -webkit-transition: all 0.2s linear;
+    -o-transition: all 0.2s linear;
+    transition: all 0.2s linear; }
+    .main--section .mainSendOrder::before {
+      content: '';
+      width: 50px;
+      height: 50px;
+      border-left: 10px solid #e71b1b;
+      border-bottom: 10px solid #e71b1b;
+      display: block;
+      position: absolute;
+      bottom: -30px;
+      left: -30px;
+      -webkit-transition: all 0.2s linear;
+      -o-transition: all 0.2s linear;
+      transition: all 0.2s linear; }
+    .main--section .mainSendOrder::after {
+      content: '';
+      width: 50px;
+      height: 50px;
+      border-right: 10px solid #e71b1b;
+      border-top: 10px solid #e71b1b;
+      display: block;
+      position: absolute;
+      top: -30px;
+      right: -30px;
+      -webkit-transition: all 0.2s linear;
+      -o-transition: all 0.2s linear;
+      transition: all 0.2s linear; }
+    .main--section .mainSendOrder:hover {
+      -webkit-transition: all 0.2s linear;
+      -o-transition: all 0.2s linear;
+      transition: all 0.2s linear;
+      background: #000000;
+      color: #e71b1b; }
+      .main--section .mainSendOrder:hover::after {
+        top: 0;
+        right: 0;
+        -webkit-transition: all 0.2s linear;
+        -o-transition: all 0.2s linear;
+        transition: all 0.2s linear; }
+      .main--section .mainSendOrder:hover::before {
+        bottom: 0;
+        left: 0;
+        -webkit-transition: all 0.2s linear;
+        -o-transition: all 0.2s linear;
+        transition: all 0.2s linear; }
+  .main--section .main--video {
+    padding-left: 80px; }
+    .main--section .main--video iframe {
+      width: 100%;
+      height: 300px; }
+    .main--section .main--video p {
+      margin-top: 50px;
+      text-align: center; }
+
+.divider {
+  background: #000000;
+  height: 35px; }
