--- a/app/pug/blocks/_layout.pug
+++ b/app/pug/blocks/_layout.pug
@@ -1,26 +1,42 @@
 doctype html
 html(lang="ru")
-  head
-    meta(charset="UTF-8")
-    meta(name="viewport", content="width=device-width, initial-scale=1, shrink-to-fit=no")
-    link(href="assets/img/favicon.ico", rel="shortcut icon")
-    link(type="text/css", href="css/libs.min.css", rel="stylesheet")
-    link(type="text/css", href="css/jquery-ui.min.css", rel="stylesheet")
-    link(href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap&subset=cyrillic" rel="stylesheet")
-    link(type="text/css", href="css/hamburgers.css", rel="stylesheet")
-    link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css")
-    link(type="text/css", href="css/main.css", rel="stylesheet")
-    title VIDIVIDS - Ролики для соц.сетей
-  body
-    #contentWrapper.content-wrapper
-      #pageWrapper.page-wrapper
-        include _header
-        block content
+	head
+		meta(charset="UTF-8")
+		meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
+		link(href="assets/img/favicon.ico" rel="shortcut icon")
+		link(type="text/css" href="css/libs.min.css" rel="stylesheet")
+		link(type="text/css" href="css/jquery-ui.min.css" rel="stylesheet")
+		link(href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap&subset=cyrillic" rel="stylesheet")
+		link(type="text/css" href="css/hamburgers.css" rel="stylesheet")
+		link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css")
+		link(rel="stylesheet" href="css/chartist.min.css")
+		link(type="text/css" href="css/main.css" rel="stylesheet")
+		title VIDIVIDS - Ролики для соц.сетей
+	body
+		#contentWrapper.content-wrapper
+			#pageWrapper.page-wrapper
+				include _header
+				block content
 
-      #footerWrapper.footer-wrapper
-        include _footer
-
-    script(src="js/libs.min.js")
-    script(src="js/jquery-ui.min.js")
-    script(src="js/hamburger.js")
-    script(src="js/common.js")
+			#footerWrapper.footer-wrapper
+				include _footer
+		div(style="display: none;" id="order--form")
+			.order--modal
+				h3(class="order--modal__title") Оставить заявку
+				form(action="")
+					.group
+						input(type="text" name="name")
+						span(class="bar")
+						label Ваше имя
+					.group
+						input(type="text" name="phone" id="phone")
+						span(class="bar")
+						label Ваш телефон
+				button(type="submit" class="sendBtn") Отправить заявку
+		script(src="js/libs.min.js")
+		script(src="js/jquery-ui.min.js")
+		script(src="js/jquery.validate.min.js")
+		script(src="js/jquery.mask.min.js")
+		script(src="js/hamburger.js")
+		script(src="js/chartist.min.js")
+		script(src="js/common.js")
