--- a/app/sass/ui/_ui-components.sass
+++ b/app/sass/ui/_ui-components.sass
@@ -140,3 +140,75 @@ select, input, textarea
 .m0-auto
   margin: 0 auto
 
+/* form starting stylings ------------------------------- */
+.order--modal
+  & .group
+    position: relative
+    margin-bottom: 30px
+    & input
+      font-size: 16px
+      padding: 10px
+      display: block
+      width: 300px
+      border: none
+      border-bottom: 1px solid #ccc
+    & input:focus
+      outline: none
+  & label
+    color: #999
+    font-size: 18px
+    position: absolute
+    pointer-events: none
+    left: 10px
+    top: 15px
+    transition: 0.2s ease all
+    -moz-transition: 0.2s ease all
+    -webkit-transition: 0.2s ease all
+
+  & input:focus ~ label
+    top: -15px
+    font-size: 14px
+    color: #5264AE
+  & .bar
+    position: relative
+    display: block
+    width: 320px
+  & .bar:before,
+  & .bar:after
+    content: ""
+    height: 2px
+    width: 0
+    bottom: 0
+    position: absolute
+    background: #5264AE
+    transition: 0.2s ease all
+    -moz-transition: 0.2s ease all
+    -webkit-transition: 0.2s ease all
+  & .bar:before
+    left: 50%
+  & .bar:after
+    right: 50%
+  & input:focus ~ .bar:before,
+  & input:focus ~ .bar:after
+    width: 50%
+.order--modal
+  & .order--modal__title
+    margin: 0 auto
+    margin-bottom: 25px
+    text-transform: uppercase
+    text-align: center
+  & .sendBtn
+    margin: 0 auto
+    margin-top: 20px
+    background: $red
+    color: #ffffff
+    font-weight: 500
+    font-size: 18px
+    text-align: center
+    display: block
+    padding: 15px 30px
+    transition: 0.2s ease all
+    &:hover
+      color: $red
+      background: #000000
+      transition: 0.2s ease all
